# cmake-test-coverage-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lib_under_test.cpp  lib_under_test.hpp  tests.cpp
